--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,3 +1,12 @@
+---
+common-css:
+  - "/css/bootstrap.min.css"
+  - "/css/main-minimal.css"
+common-js:
+  - "/js/jquery-1.11.2.min.js"
+  - "/js/bootstrap.min.js"
+---
+
 <!DOCTYPE html>
 <!--
 	Forty by HTML5 UP
