--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -1,10 +1,6 @@
 ---
 common-css:
-  - "/css/bootstrap.min.css"
-  - "/css/main-minimal.css"
-common-js:
-  - "/js/jquery-1.11.2.min.js"
-  - "/js/bootstrap.min.js"
+  - "/css2/main.css"
 ---
 
 <!DOCTYPE html>
