--- a/css/main.css
+++ b/css/main.css
@@ -212,8 +212,8 @@ img {
 }
 
 .container-fluid  {
-  padding-left: max(15px, env(safe-area-inset-left));
-  padding-right: max(15px, env(safe-area-inset-right));
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 /* Multi-level navigation links */
