--- a/_includes/head.html
+++ b/_includes/head.html
@@ -86,10 +86,13 @@
 
   {% if page.share-img %}
   <meta property="og:image" content="{{ page.share-img }}" />
+  <link rel="icon" type="image/png" href="{{ page.share-img }}" />
   {% elsif site.avatar %}
   <meta property="og:image" content="{{ site.url }}{{ site.avatar }}" />
+  <link rel="icon" type="image/png" href="{{ site.url }}{{ site.avatar }}" />
   {% endif %}
 
+  
 
   <!-- Twitter summary cards -->
   <meta name="twitter:card" content="summary" />
